--- a/style.css
+++ b/style.css
@@ -12,15 +12,11 @@ nav {
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  max-width: 300px;
-  margin: 1rem;
-  padding: 1rem;
-}
-
-h1 {
+  max-width: 500px;
+  margin: auto;
+  padding: 2rem;
   text-align: center;
+
 }
 
 input {
@@ -30,6 +26,7 @@ input {
   padding: 0.5rem;
   border-radius: 5px;
 }
+
 
 #output {
   margin-top: 1rem;
@@ -42,13 +39,13 @@ input {
 
 button {
   margin-top: 1rem;
-  width: 100%;
   padding: 0.5rem;
 }
 
 table {
   border: 0.1rem solid black;
   border-radius: 0.5rem;
+  width: 100%;
 }
 
 td {
