--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+  --primary: #804ed5;
+}
+
 * {
   text-align: center;
 }
@@ -61,4 +65,28 @@ a {
 
 a:hover {
   color: red;
+}
+
+
+.footer {
+  background-color: var(--primary);
+  padding: 2rem;
+  color: white;
+  /* width: 100%; */
+  margin-top: 2rem;
+  border-radius: 1rem 1rem 0rem 0rem; 
+}
+
+.footer .social-links {
+  display: flex;
+  flex-direction: row;
+}
+
+.footer .social-links .list-item-inline {
+  margin: 1rem;
+}
+
+.link {
+  text-decoration: none;
+  color: white;
 }
